--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,8 @@
         }
     ],
     "require": {
-        "php": ">=5.5.9",
-        "illuminate/support": ">=5.0"
+        "php": "^8.1",
+        "illuminate/support": "^10.0"
     },
     "autoload": {
         "psr-4": {
