--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "\\InfyOm\\GeneratorBuilder\\GeneratorBuilderServiceProvider"
+                "\\InfyOm\\GeneratorBuilder\\Providers\\GeneratorBuilderServiceProvider"
             ]
         }
     },
