--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,9 @@
     ],
     "require": {
         "php": "^8.1",
-        "illuminate/support": "^10.0"
+        "illuminate/http": "^10.0",
+        "illuminate/support": "^10.0",
+        "illuminate/view": "^10.0"
     },
     "autoload": {
         "psr-4": {
